[project]
name = "crag-reflective-rag"
version = "1.0.0"
description = "Corrective RAG + Self-Reflective RAG Implementation"
readme = "README.md"
requires-python = ">=3.12,<3.14"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = ["rag", "crag", "self-reflective", "fastapi", "qdrant", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # API Framework
    "fastapi[standard]",
    "mangum",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "python-multipart==0.0.20",
    # Document Processing
    "docling",
    "docling-core",
    "semchunk",
    "unstructured[pdf]==0.18.31",
    "onnxruntime==1.23.2",
    "python-magic",
    "pillow==11.3.0",
    # Embeddings & Vector DB
    "openai==2.14.0",
    "pinecone[grpc]",
    "tiktoken==0.11.0",
    # Text-to-SQL
    "vanna[fastapi,openai,postgres]",
    "sqlalchemy==2.0.43",
    "psycopg2-binary==2.9.10",
    "faker",
    # Evaluation & Monitoring
    "ragas",
    "datasets",
    "opik",
    # Utilities
    "python-dotenv==1.1.1",
    "httpx==0.28.1",
    # Caching
    "numpy==2.2.6",
    "upstash-redis",
    # AWS Services
    "boto3==1.40.61",
    # Compatibility pins from prior project
    "numba==0.61.2",
    "llvmlite==0.44.0",
    # Existing app dependencies kept for current code paths
    "qdrant-client==1.16.2",
    "tavily-python>=0.5.0",
    "loguru>=0.7.2",
    "voyageai>=0.2.0",
    # Local reranking stack from reference
    "sentence-transformers==5.2.0",
    "torch==2.2.2",
    "transformers==4.57.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "ruff",
]

[project.scripts]
crag-rag = "app.main:main"

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-asyncio",
    "black",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
